php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47398 PDO_Firebird doesn't implements quoter correctly
Submitted: 2009-02-15 21:38 UTC Modified: 2009-02-15 21:54 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: PDO related
PHP Version: 5.3CVS-2009-02-15 (CVS) OS:
Private report: No CVE-ID: None
 [2009-02-15 21:38 UTC] felipe@php.net
Description:
------------
PDO_firebird doesn't add the initial and final quotes as other drivers and is not escaping quotes. Because this behavior currently pdo_033.phpt is failing.

Reproduce code:
---------------
var_dump($db->quote(' !"#$%&\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~'));
var_dump($db->quote(''));


Expected result:
----------------
string(98) "' !"#$%&''()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~'"
string(2) "''"


Actual result:
--------------
string(96) " !"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~"
bool(false)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-02-15 21:54 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5.3 and HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 11:00:01 2026 UTC