- Fixed bug #47398 (PDO_Firebird doesn't implements quoter correctly)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@275884 c90b9560-bf6c-de11-be94-00142212c4b1